# allianz-insurance-demo

./: .gitignore  DEMO.md  README.md  TASKS.md  databricks.yml  pyproject.toml
dashboards/: allianz_dashboard.json
docs/: EXECUTIVE_SUMMARY.md
docs/diagrams/: architecture.mmd
genie/: live_space.json  optimized_space.json
pipelines/: allianz_dlt.py
resources/: jobs.yml  pipeline.yml
scripts/: build_dashboard.py  build_genie.py  merge_allianz_pc.py  optimize_genie.py  score_genie.py  smoke_test_sql.py
scripts/genie_workbench/: __init__.py  scoring.py
sql/: 01_underwriting_kpis.sql  02_book_health.sql  03_loss_triangle.sql  04_solvency_ii.sql  05_cat_pml_exposure.sql  06_segment_loss_ratio.sql  07_claim_360.sql  08_reinsurance_recoveries.sql  09_combined_ratio_vs_benchmark.sql  10_realtime_event_risk.sql
src/: event_report.py  external_feeds.py  generate_data.py  ingest_external.py
