[project]
name = "allianz-insurance-demo"
version = "0.1.0"
description = "Allianz insurance intelligence demo on Databricks (PL/CL/Specialty + Genie + AI/BI)"
authors = [{name = "saswata30"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "mimesis>=18.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
connect = ["databricks-connect>=16.4,<17.0"]
deploy  = ["databricks-sdk>=0.56"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
